Name changed to DL Chain Terminal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Blockchain Terminal</string>
+    <string name="app_name">DL Chain Terminal</string>
     <string name="settings_text"><u>Settings</u></string>
 </resources>
